# vaca

./: .gitignore  CMakeLists.txt  README.md
include/: Anchor.h  AnchorLayout.h  Application.h  BandedDockArea.h  BasicDockArea.h  Bind.h  Bix.h  BoxConstraint.h  BoxLayout.h  Brush.h  Button.h  ButtonBase.h  CancelableEvent.h  CheckBox.h  ClientLayout.h  Clipboard.h  CloseEvent.h  Color.h  ColorDialog.h  ComboBox.h  Command.h  CommandEvent.h  CommonDialog.h  Component.h  Constraint.h  ConsumableEvent.h  Cursor.h  CustomButton.h  CustomLabel.h  DataGrid.h  Debug.h  Dialog.h  DockArea.h  DockBar.h  DockFrame.h  DropFilesEvent.h  Enum.h  Event.h  Exception.h  FileDialog.h  (+78 more)
include/VACA/: Anchor.h  Anchor.hpp  AnchorLayout.h  AnchorLayout.hpp  Application.h  Application.hpp  BandedDockArea.h  BandedDockArea.hpp  Base.h  Base.hpp  BasicDockArea.h  BasicDockArea.hpp  Bind.hpp  Bix.h  Bix.hpp  BoxConstraint.h  BoxConstraint.hpp  BoxLayout.h  BoxLayout.hpp  Brush.h  Brush.hpp  Button.h  Button.hpp  ButtonBase.h  ButtonBase.hpp  CancelableEvent.h  CancelableEvent.hpp  CheckBox.h  CheckBox.hpp  ClientLayout.h  ClientLayout.hpp  Clipboard.h  Clipboard.hpp  CloseEvent.h  CloseEvent.hpp  Color.h  Color.hpp  ColorDialog.h  ColorDialog.hpp  ComboBox.h  (+211 more)
include/Wg/: Anchor.hpp  AnchorLayout.hpp  Application.hpp  BandedDockArea.hpp  Base.hpp  BasicDockArea.hpp  Bix.hpp  BoxConstraint.hpp  BoxLayout.hpp  Brush.hpp  Button.hpp  ButtonBase.hpp  CancelableEvent.hpp  CheckBox.hpp  ClientLayout.hpp  Clipboard.hpp  CloseEvent.hpp  Color.hpp  ColorDialog.hpp  ComboBox.hpp  Command.hpp  CommandEvent.hpp  CommonDialog.hpp  Component.hpp  ConditionVariable.hpp  Constraint.hpp  ConsumableEvent.hpp  Cursor.hpp  CustomButton.hpp  CustomLabel.hpp  DataGrid.hpp  Debug.hpp  Dialog.hpp  DockArea.hpp  DockBar.hpp  DockFrame.hpp  DropFilesEvent.hpp  Enum.hpp  Event.hpp  Exception.hpp  (+87 more)
source/: Anchor.cpp  AnchorLayout.cpp  Application.cpp  BandedDockArea.cpp  BasicDockArea.cpp  Bix.cpp  BoxConstraint.cpp  BoxLayout.cpp  Brush.cpp  Button.cpp  ButtonBase.cpp  CancelableEvent.cpp  CheckBox.cpp  ClientLayout.cpp  Clipboard.cpp  CloseEvent.cpp  Color.cpp  ColorDialog.cpp  ComboBox.cpp  Command.cpp  CommandEvent.cpp  CommonDialog.cpp  Component.cpp  ConditionVariable.cpp  Constraint.cpp  ConsumableEvent.cpp  Cursor.cpp  CustomButton.cpp  CustomLabel.cpp  Debug.cpp  Dialog.cpp  DockArea.cpp  DockBar.cpp  DockFrame.cpp  DropFilesEvent.cpp  Event.cpp  Exception.cpp  FileDialog.cpp  FindFiles.cpp  FindTextDialog.cpp  (+74 more)
source/STD/: MainArgs.hpp
source/Unix/: MutexImpl.hpp
source/Win32/: BrushImpl.hpp  MainArgs.hpp  MutexImpl.hpp  PenImpl.hpp  WidgetsMovementImpl.hpp  Win32.cpp
source/std/: MainArgs.h
source/unix/: MutexImpl.h
source/win32/: BrushImpl.h  PenImpl.h  WidgetsMovementImpl.h  win32.cpp
